--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:MoCushle
 header-img: "img/facebook.jpg"
 tagline: "cn"  
-description: "Hanson|Think Different"  
+description: "MoCushle|You Are No.1"  
 baseurl: ""
 url: "http://MoCushle.github.io"  
 
@@ -44,7 +44,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "hanson"
+      author: "MoCushle"
       header-img: "img/facebook.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
