--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Schweiger's Blog"
+title: "Schweiger's"
 header-img: "img/facebook.jpg"
 tagline: "cn"  
 description: "Schweiger's|Hungry and Foolish"  
