--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ defaults:
     values:
       layout: "post"
       author: "Schweiger"
-      header-img: "img/1.jpg" # We don't want posts without a header image, that whould mean white on white
+      header-img: "img/shan.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 
