--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Schweiger's"
-header-img: "img/shan.jpg"
+header-img: "img/shan2.jpg"
 tagline: "cn"  
 description: "Schweiger's|Hungry and Foolish"  
 baseurl: ""
